Closed Bug 1245612 Opened 8 years ago Closed 8 years ago

Send texture usage in crash reports

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: snorp, Unassigned)

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file)

Bug 1243072 fixed things so we know (more or less) how much texture memory we're using. We should also send this number in crash reports.
Whiteboard: [gfx-noted]
Attachment #8715862 - Flags: review?(benjamin) → review+
https://hg.mozilla.org/mozilla-central/rev/456ca897229f
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: