Bug 1245612 - Send texture usage bytes in crash reports r=bsmedberg