gfx/gl/GfxTexturesReporter.cpp
@@ -6,6 +6,10 @@
 
 #include "GfxTexturesReporter.h"
 
+#ifdef MOZ_CRASHREPORTER
+#include "nsExceptionHandler.h"
+#endif
+
 using namespace mozilla;
 using namespace mozilla::gl;
 
@@ -23,4 +27,8 @@ GfxTexturesReporter::UpdateAmount(MemoryUse action, size_t amount)
     } else {
         sAmount += amount;
     }
+
+#ifdef MOZ_CRASHREPORTER
+    CrashReporter::AnnotateTexturesSize(sAmount);
+#endif
 }
